--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>NodeJS A</title>
+    <title>node.js</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="id=edge">
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-
     <div class="container">
         <div class="jumbotron">
-            <h1>NodeJS Application</h1>
-            <p>NodeJS, MongoDB, and Bootstrap for developing responsive, mobile-first projects on the web.</p>
-            <p>Use docker-compose</p>
+            <h1>node.js web application</h1>
+            <p>node.js, mongoDB, and bootstrap for developing responsive, mobile-first projects on the web.</p>
+            <p>with docker container</p>
         </div>
         <form method="post" action="/item/add">
             <label for="name">Name</label>
@@ -34,7 +33,6 @@
             <% }); %>
         </ul>
     </div>
-
 </body>
 
 </html>
